Revert "lesha-pamic. Хочу чтоб работало"
This reverts commit f67a2114260970328aa54e73416ffb22aeb5ee9f.

--- a/src/KaCake/Views/Assignment/Index.cshtml
+++ b/src/KaCake/Views/Assignment/Index.cshtml
@@ -79,7 +79,7 @@
                 }
             });
 
-            @if ( Model.UserIsTeacher)
+            @if (User.IsInRole(RoleNames.Admin))
             {
                 <text>
                     $('.table > tbody > tr').css('cursor', 'pointer');
