--- a/src/KaCake/Views/Course/Create.cshtml
+++ b/src/KaCake/Views/Course/Create.cshtml
@@ -27,6 +27,22 @@
     </div>
 
     <div class="form-group">
+        <label asp-for="TeachersToAdd" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <select asp-for="TeachersToAdd" asp-items="@ViewBag.TeachersToAdd" class="selectpicker" data-live-search="true" data-selected-text-format="count" multiple></select>
+            <span asp-validation-for="TeachersToAdd" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="TeachersToRemove" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <select asp-for="TeachersToRemove" asp-items="@ViewBag.TeachersToRemove" class="selectpicker" data-live-search="true" data-selected-text-format="count" multiple></select>
+            <span asp-validation-for="TeachersToRemove" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default">Create</button>
         </div>
