lesha-panic. Изменил способ доступа пользователей к кнопкам во View и методам контроллера

--- a/src/KaCake/Views/Assignment/Index.cshtml
+++ b/src/KaCake/Views/Assignment/Index.cshtml
@@ -79,7 +79,7 @@
                 }
             });
 
-            @if (User.IsInRole(RoleNames.Admin))
+            @if (Model.IsCourseTeacher)
             {
                 <text>
                     $('.table > tbody > tr').css('cursor', 'pointer');
