--- a/src/KaCake/Views/Course/View.cshtml
+++ b/src/KaCake/Views/Course/View.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "View";
-    bool isAdmin = User.IsInRole(RoleNames.Admin);
 }
 
 <h2>@Model.Name</h2>
@@ -19,7 +18,7 @@
 
 <h4>Tasks (@Model.TaskGroups.Count):</h4>
 <div class="list-group">
-    @if (isAdmin)
+    @if (Model.IsUserATeacher)
     {
         <a asp-controller="Course" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-pencil"></span> Edit course</a>
         <a asp-controller="TaskGroup" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Add task group</a>
