--- a/src/KaCake/Views/Project/Index.cshtml
+++ b/src/KaCake/Views/Project/Index.cshtml
@@ -277,7 +277,7 @@
 
                     comment = null;
                     $('#comment').val("");
-                    
+
                     $('#save_comments').text(needToSaveVal);
                 });
             $('body').on('click',
@@ -461,6 +461,7 @@
         $('#tree').treeview({
             data: tree,
             onNodeSelected: function (event, data) {
+                console.log("../GetFile/@Model.SubmissionId?file=" + encodeURI(data.file));
                 $.get("../GetFile/@Model.SubmissionId?file=" + encodeURI(data.file),
                     function (result) {
                         goToTab(data.file, result);
