--- a/src/KaCake/Views/Course/View.cshtml
+++ b/src/KaCake/Views/Course/View.cshtml
@@ -31,6 +31,10 @@
         <a asp-controller="Course" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-pencil"></span> Edit course</a>
         <a asp-controller="TaskGroup" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Add task group</a>
     }
+    @if (Model.CanDeleteThisCourse)
+    {
+        <a asp-controller="Course" asp-action="Delete" asp-route-id="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-remove"></span> Delete course</a>
+    }
     @foreach (var taskGroup in Model.TaskGroups)
     {
         <a asp-controller="TaskGroup" asp-action="View" asp-route-id="@taskGroup.Id" class="list-group-item">@taskGroup.Name</a>
