--- a/src/KaCake/Views/TaskVariant/Create.cshtml
+++ b/src/KaCake/Views/TaskVariant/Create.cshtml
@@ -7,7 +7,7 @@
 
     <h2>Create task variant</h2>
 
-<form asp-controller="TaskVariant" asp-action="Create" Method="post" class="form-horizontal">
+<form asp-controller="TaskVariant" asp-action="Create" enctype="multipart/form-data" Method="post" class="form-horizontal">
     <div asp-validation-summary="All" class="text-danger"></div>
         
     <input asp-for="TaskGroupId"/>
@@ -28,7 +28,16 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
     </div>
-        
+    
+    <div class="form-group">
+        <label asp-for="Name" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="TesterArchive" class="form-control" />
+            <span asp-validation-for="TesterArchive" class="text-danger"></span>
+        </div>
+    </div>
+
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default">Create</button>
