--- a/src/KaCake/Views/Course/View.cshtml
+++ b/src/KaCake/Views/Course/View.cshtml
@@ -26,7 +26,7 @@
 
 <h4>Actions:</h4>
 <div class="list-group">
-    @if (Model.IsUserATeacher)
+    @if (Model.IsUserATeacher || Model.CanDeleteThisCourse)
     {
         <a asp-controller="Course" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-pencil"></span> Edit course</a>
         <a asp-controller="TaskGroup" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Add task group</a>
